fix contrast problems

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,8 +16,8 @@ body {
   --secondary-color: #228b22; /* Light Green */
   --third-color: #bae9f2; /* Light Blue */
   --highlight-color: #fed8b1; /* Light Peach */
-  --highlight-color-light: #8a9a5b; /* Olive Green */
-  --text-color: #004953; /* Dark Green */
+  --highlight-color-light: #A1B078; /* Olive Green */
+  --text-color: #002429; /* Dark Green */
 }
 
 h1,
